[gd_scene load_steps=2 format=3 uid="uid://nav4fo21ldex"]

[ext_resource type="Script" uid="uid://6fduiabkauci" path="res://Assets/Scripts/UI/end_level_screen.gd" id="1_tlcta"]

[node name="end_level_screen" type="Control"]
process_mode = 2
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tlcta")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.001, 1)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="next_Button" type="Button" parent="."]
process_mode = 2
top_level = true
z_index = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = 88.0
offset_right = 116.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
text = "Next level"

[node name="restart_Button" type="Button" parent="."]
process_mode = 2
top_level = true
z_index = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = 177.0
offset_right = 116.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart level"

[node name="quit_Button" type="Button" parent="."]
process_mode = 2
top_level = true
z_index = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = 268.0
offset_right = 116.0
offset_bottom = 338.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Return to desktop"

[node name="Label" type="Label" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -19.0
offset_right = 58.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0053029, 0.9565468)
text = "Congratulations !"

[connection signal="pressed" from="next_Button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="restart_Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="quit_Button" to="." method="_on_quit_button_pressed"]
